--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@chainlink/contracts": "^0.1.6",
     "@openzeppelin/contracts": "^3.4.1"
+  },
+  "devDependencies": {
+    "ganache-cli": "^6.12.2"
   }
 }
