--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "@openzeppelin/contracts": "^3.4.1"
   },
   "devDependencies": {
-    "ganache-cli": "^6.12.2"
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.0.32",
+    "ganache-cli": "^6.12.2",
+    "hardhat": "^2.1.1"
   }
 }
